--- a/src/scss/st.scss
+++ b/src/scss/st.scss
@@ -134,6 +134,7 @@ body, html {
 	width: 100%;
 	margin: 0 17px;
 	&__block {
+		width: auto;
 		position: absolute;
 		right: 0;
 		line-height: 20px;
