correction in component Button

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -1,6 +1,6 @@
 $background-color___calc__button: #f5f5f5;
 $background-color___calc__button_number: #fdfdfd;
-$font-size__index-menu: 13px;
+$font-size__header-menu: 13px;
 $font-size__display: 45px;
 $font-size__calc-add__button: 13px;
 $font-size__calc__button: 18px;
